# jmopenorders

./: .bumpversion.cfg  .codacy.yml  .cookiecutter.json  .coveragerc  .darglint  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .isort.cfg  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  app.spec  appveyor.yml  docker-compose.yml  environment.yml  install_debian.sh  junit.xml  lgtm.yml  mypy.ini  mypyrc  noxfile.py  project.json  (+17 more)
.github/: release-drafter.yml
.github/workflows/: release.yml  tests.yml
conda.recipe/: meta.yaml
docker/: README.md  docker-compose.yml
docs/: .tox.ini  app.rst  conf.py  contributing.rst  environment.yml  index.rst  installation.rst  installation_windows.rst  jmopenorders.api.rst  jmopenorders.core.rst  jmopenorders.rst  mkdocs.yml  modules.rst  reference.rst  requirements.txt  upgrade.rst
docs/source/: conf.py  contributors.rst  index.rst  install_windows.rst  installation.rst  settings.rst  upgrade.rst
docs/source/_ext/: edit_on_github.py
jmopenorders/: __init__.py  __main__.py  __version__.py  _version.py  app.py  cli.py  jmopenorders.ini
jmopenorders/api/: __init__.py  cleanoutputdir.py  generateorders.py  getdata.py  getserviceperson.py  hello.py  report.py
jmopenorders/core/: __init__.py  config.py  logger.py
jmopenorders/lib/: __init__.py  cleanoutput.py  generateorders.py  getdata.py  getserviceperson.py
jmopenorders/openorders/: __init__.py
pip-wheel-metadata/jmopenorders.dist-info/: METADATA
recipe/: meta.yaml
src/jmopenorders/: __init__.py  __main__.py  __version__.py  cli.py  hello.py  jmopenorders.py
src/jmopenorders/api/: __init__.py  cleanoutputdir.py  generateorders.py  getdata.py  getserviceperson.py  hello.py  report.py
src/jmopenorders/core/: __init__.py  config.py  logger.py
tests/: __init__.py  api_test.py  cli_test.py  config_test.py  generate_data_test.py  generate_test_data.py  logger_test.py  pytest.ini  test_api.py  test_basic.py  test_cli.py  test_generate_data.py  test_jmopenorders.py  test_main.py
tests/core/: config_test.py  logger_test.py  test_config.py  test_logger.py
