[project]
name = "jmopenorders"
version = "0.2.0"
description = "A BDE tool"
authors = [
    "Jürgen Mülbert <juergen.muelbert@gmail.com>"
]
license = "EUPL-1.2"
readme = "README.rst"
python = "^3.6"
homepage = "https://jmopenorders.github.io/"
repository = "https://github.com/jmuelbert/jmopenorders"
documentation = "https://jmopenorders.readthedocs.io/en/latest/"

keywords = ['reporting', 'excel']

classifiers = [
        "Development Status:: 4 - Beta",
        "Environment :: Console",
        "Intended Audience:: Developers",
        "Intended Audience :: End Users/Desktop",
        "License:: OSI Approved:: European Union Public Licence 1.2 (EUPL 1.2)",
        "Natural Language:: English",
        "Operating System:: OS Independent",
        "Operating System:: MacOS:: MacOS X",
        "Operating System:: POSIX",
        "Operating System:: POSIX:: BSD",
        "Operating System:: POSIX:: Linux",
        "Operating System:: Microsoft:: Windows",
        "Programming Language:: Python",
        "Programming Language:: Python:: 3",
        "Programming Language:: Python:: 3:: Only",
        "Programming Language:: Python:: 3.6",
        "Programming Language:: Python:: 3.7",
        "Programming Language:: Python:: Implementation:: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Environment:: Console",
        "Topic:: Office / Business",
]

# Requirements
[dependencies]
openpyxl="^3.0.0"
PyYaml="^5.3.1"
pip="^19.3.1"

[dev-dependencies]
black = { version = "^19.3-alpha.0", python = "^3.6" }

[build-system]
# Minimum requirements for the build system to execute.
# See https://github.com/scipy/scipy/pull/10431 for the AIX issue.
requires = [
    "setuptools >= 41.4.0",
    "wheel >= 0.33.6",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 80
