# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = jmopenorders/_version.py
versionfile_build = jmopenorders/_version.py
tag_prefix = v
parentdir_prefix = jmopenorders-

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license             = EUPL-1.2
license_files       = LICENSE
platforms           = any
description         = Open Source Create OpenOrders Reports
long_description    = file:README.rst
keywords            = business report
classifiers=
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Office/Business

[tool:pytest]
testpaths = tests
norecursedirs = .git testing_config

[flake8]
max-line-length=120
exclude =
    .git,
    .github,
    .eggs,
    *.egg-info,
    examples,
    docs,
    .tox,
    bin,
    lib,
    dist,
    build,
    tools,
    __init__.py,
    *.yml
    .venv,
    deps
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
ignore =
    E501,
    W503,
    E203,
    D202

[pycodestyle]
max-line-length=120
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build

[mypy]
python_version = 3.7
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = silent
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal = 1

[bdist_rpm]
doc_files = docs AUTHORS INSTALL LICENSE README.rst
