[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license             = EUPL-1.2
license_files       = LICENSE
platforms           = any
description         = Open Source Create OpenOrders Reports
long_description    = file:README.rst
keywords            = business report
classifiers=
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Office/Business

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html


[tool:pytest]
testpaths = tests
norecursedirs = .git testing_config .* *.egg* build dist conda.recipe
addopts =
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --cov-report term-missing
    --tb native
    --strict
    --durations=20
env =
    PYTHONHASHSEED=0
markers =
    serial: execute test serially (to avoid race conditions)

[flake8]
max-line-length=100
exclude =
    jmopenorders/_version.py,
    conda.receipe,
    versioneer.py,
    .git,
    .github,
    .eggs,
    *.egg-info,
    examples,
    docs,
    .tox,
    bin,
    benchmarks,
    lib,
    dist,
    build,
    tools,
    *.yml
    .venv,
    venv,
    deps
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
per-file-ignores =
    # __init__ modules export names


[pycodestyle]
max-line-length=100
exclude =
    jmopenorders/_version.py,
    conda.receipe,
    versioneer.py,
    .git,
    .github,
    .eggs,
    *.egg-info,
    examples,
    docs,
    .tox,
    bin,
    benchmarks,
    lib,
    dist,
    build,
    tools,
    *.yml
    .venv,
    venv,
    deps

[mypy]
python_version = 3.7
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = silent
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal = 1

[bdist_rpm]
doc_files = docs AUTHORS INSTALL LICENSE README.rst

[versioneer]
VCS = git
versionfile_source = jmopenorders/_version.py
versionfile_build = jmopenorders/_version.py
tag_prefix =
parentdir_prefix = jmopenorders-
